--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
         <hr>
     </header>
     <div class="container">
+        <h2 class="subtitle has-text-centered is-4">Lo más reciente en México</h2>
         {% block content %}{% endblock %}
     </div>
   </body>
